# planetary-eos-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  HANDOFF.md  INSTALL.md  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  TESTING_GUIDE_V1.1.md  composition.md  docker-compose.yml  export_planetprofile.py  make_compositions.py  plot_comparisons.py  pyproject.toml  run_full_pipeline.py  run_perplex.py  validate_tab.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
.streamlit/: config.toml
build_inputs/: icy_dew13_hydrous_template.build.in  icy_dew17_comet_template.build.in  icy_dew17_hhph_template.build.in  icy_hpha02_hydrous_simple_template.build.in  icy_hpha02_hydrous_template.build.in  lunar_hp633_template.build.in  lunar_stx21_template.build.in
compositions/: moon_far_highlands_surface_proxy.json  moon_far_highlands_surface_proxy_bulk_values.txt  moon_far_highlands_surface_proxy_summary.txt  moon_near_maria_surface_proxy.json  moon_near_maria_surface_proxy_bulk_values.txt  moon_near_maria_surface_proxy_summary.txt
configs/: icy_worlds.example.json
outputs/: README.md
outputs/moon_far_dry_mantle/: moon_far_dry_mantle_planetprofile.tab  oxide_omissions.txt
outputs/moon_near_pkt_mantle/: moon_near_pkt_mantle_planetprofile.tab  oxide_omissions.txt
perplex_workbench/: __init__.py
perplex_workbench/core/: __init__.py  config_io.py  model_schema.py  phase_parser.py
perplex_workbench/gui/: autosave.py  batch_processor.py  comparison_tools.py  phase_diagram.py  streamlit_app.py
planetary_eos_lab/cli/: __init__.py  common.py  export_planetprofile.py  gui.py  make_compositions.py  plot_comparisons.py  run_full_pipeline.py  run_perplex.py
planetary_eos_lab/core/: config.py  config_io.py  constants.py  database_utils.py  exceptions.py  logging_config.py  logging_integration.py  model_schema.py  phase_parser.py  pipeline_runner.py  validation_summary.py
planetary_eos_lab/gui/: __init__.py  autosave.py  batch_processor.py  comparison_tools.py  database_selector.py  import_export.py  phase_diagram.py  progress.py  session_state.py  streamlit_app.py  validation_enhanced.py  visualization.py
tests/: test_core_helpers.py  test_lunar_pipeline.py
