[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planetary-eos-lab"
version = "1.0"
description = "A GUI-first laboratory for planetary equation-of-state modeling with Perple_X and PlanetProfile integration"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Emma Vellard", email = "emma.vellard@outlook.fr"}
]
maintainers = [
    {name = "Emma Vellard", email = "emma.vellard@outlook.fr"}
]
keywords = [
    "perplexX",
    "thermodynamics",
    "planetary-science",
    "geophysics",
    "equation-of-state",
    "lunar-science"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.39.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "plotly>=5.18.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/EmmaVellard/planetary-eos-lab"
Repository = "https://github.com/EmmaVellard/planetary-eos-lab"
Issues = "https://github.com/EmmaVellard/planetary-eos-lab/issues"
Documentation = "https://github.com/EmmaVellard/planetary-eos-lab#readme"

[project.scripts]
planetary-eos-gui = "planetary_eos_lab.cli.gui:main"
planetary-eos-run = "planetary_eos_lab.cli.run_perplex:main"
planetary-eos-compositions = "planetary_eos_lab.cli.make_compositions:main"
planetary-eos-export = "planetary_eos_lab.cli.export_planetprofile:main"
planetary-eos-plot = "planetary_eos_lab.cli.plot_comparisons:main"
planetary-eos-pipeline = "planetary_eos_lab.cli.run_full_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["planetary_eos_lab*"]
exclude = ["tests*", "outputs*", "compositions*", "configs*", "build_inputs*"]

[tool.setuptools.package-data]
planetary_eos_lab = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | outputs
  | compositions
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
